--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -73,7 +73,7 @@ jobs:
         - name: Continuous Releaser
           uses: softprops/action-gh-release@v2
           with:
-            name: "PPSSPP ${{ env.APP_VERSION }}"
+            name: "GNOME Contacts ${{ env.APP_VERSION }}"
             tag_name: "${{ env.APP_VERSION }}"
             prerelease: false
             draft: false
