--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -53,20 +53,21 @@ jobs:
       with:
        name: version
        path: ~/version
-    
+       overwrite: true
+      
   release:
       needs: [build]
       permissions: write-all
       runs-on: ubuntu-latest
 
       steps:
-        - uses: actions/download-artifact@v4.1.8
+        - uses: actions/download-artifact@v4.3.0
           with:
             name: AppImage-x86_64
         - uses: actions/download-artifact@v4.3.0
           with:
             name: AppImage-aarch64
-        - uses: actions/download-artifact@v4.1.8
+        - uses: actions/download-artifact@v4.3.0
           with:
             name: version
 
